--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Mar 26 10:27:38 1999  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>
+
+	* math/Makefile (gmp-objs): Add inlines.  Reported by Andreas
+ 	Jaeger <aj@arthur.rhein-neckar.de>
+
 Thu Mar 25 23:57:57 1999  Roland McGrath  <roland@yaumatei.ai.mit.edu>
 
 	* sysdeps/mach/hurd/i386/Makefile [$(subdir) = csu]
