--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-26  Mark Kettenis  <kettenis@gnu.org>
+
+	* sysdeps/mach/hurd/Makefile: Only install libc_p.a linker script
+	if we build the profiled library.
+
 Fri Mar 26 10:27:38 1999  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>
 
 	* math/Makefile (gmp-objs): Add inlines.  Reported by Andreas
