--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+1999-03-25  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
+
+	* timezone/README: Update from tzdata1999c and tzcode1999c.
+
+	* timezone/africa: Update from tzdata1999c.
+	* timezone/antarctica: Likewise.
+	* timezone/asia: Likewise.
+	* timezone/australasia: Likewise.
+	* timezone/europe: Likewise.
+	* timezone/northamerica: Likewise.
+	* timezone/southamerica: Likewise.
+	* timezone/zone.tab: Likewise.
+
+	* timezone/zic.c: Update from tzcode1999c.
+
 1999-03-26  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>
 
 	* Makerules: Add $(common-objpfx)Versions.all to common-generated
