--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-29  Ulrich Drepper  <drepper@cygnus.com>
+
+	* elf/rtld.c (process_envvars): Do not automatically prevent lazy
+	relocation for SUID binaries.
+
 1999-03-29  Paul Eggert  <eggert@twinsun.com>
 
 	* libio/iopopen.c (_IO_new_proc_open): Don't modify proc_file_chain
@@ -94,7 +99,7 @@
 
 1999-03-28  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
 
-	* misc/regexp.h (compile): Cast some pointers to (char *) to avoid 
+	* misc/regexp.h (compile): Cast some pointers to (char *) to avoid
 	C++ warning.
 
 	* ctype/ctype.h (tolower, toupper): Add __THROW declaration to
