--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-30  Ulrich Drepper  <drepper@cygnus.com>
+
+	* time/tzfile.c (__tzfile_read): Process transitions from the rear.
+	Minor optimization.
+
 1999-03-29  Ulrich Drepper  <drepper@cygnus.com>
 
 	* elf/rtld.c (process_envvars): Do not automatically prevent lazy
