--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-03-31  Ulrich Drepper  <drepper@cygnus.com>
+
+	* timezone/africa: Update from tzdata1999d.
+	* timezone/europe: Likewise.
+	* timezone/northamerica: Likewise.
+
 1999-03-31  Mark Kettenis  <kettenis@gnu.org>
 
 	* login/programs/pt_chown.c (main): Save effective user ID before
