--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-03-31  Ulrich Drepper  <drepper@cygnus.com>
 
+	* localedata/locales/en_ZA: New file.  Contributed by nic@sig.co.za.
+
 	* timezone/africa: Update from tzdata1999d.
 	* timezone/europe: Likewise.
 	* timezone/northamerica: Likewise.
