--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-04-07  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
+
+	* sysdeps/unix/sysv/linux/getdents.c (__getdirentries): Return
+	directly if getdents returns with error set.
+
 1999-04-05  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
 
 	* locale/langinfo.h (THOUSEP): Rename second occurence of
