--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,15 @@
+1999-04-10  Ulrich Drepper  <drepper@cygnus.com>
+
+	* sysdeps/generic/dl-cache.c (_dl_load_cache_lookup): Rewrite to
+	use binary search.
+	Based on a patch by Jakub Jelinek <jj@sunsite.ms.mff.cuni.cz>.
+
 1999-04-08  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
 
 	* scripts/test-installation.pl (installation_problem): Skip
 	libnss1_* libraries from glibc-compat add-on.
 
-Wed Apr  7 22:52:39 1999  H.J. Lu  <hjl@gnu.org>
+1999-04-07  H.J. Lu  <hjl@gnu.org>
 
 	* io/Versions (__dup2, __pipe): Added to GLIBC_2.0 for
 	libstdc++ 2.7.2.
@@ -11,7 +17,7 @@ Wed Apr  7 22:52:39 1999  H.J. Lu  <hjl@gnu.org>
 
 1999-04-08  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
 
-	* manual/install.texi (Reporting Bugs): Add section about reported 
+	* manual/install.texi (Reporting Bugs): Add section about reported
 	bugs and correct email address of glibcbug script.
 
 1999-04-01  Thorsten Kukuk  <kukuk@suse.de>
