--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-04-10  Mark Kettenis  <kettenis@gnu.org>
+
+	* sysdeps/mach/hurd/Dist: Add clk_tck.c.
+
 1999-04-10  Ulrich Drepper  <drepper@cygnus.com>
 
 	* iconvdata/Makefile (modules): Add TIS-620.
