--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+1999-04-11  Tim Waugh  <tim@cyberelk.demon.co.uk>
+
+	* posix/wordexp.c (wordexp): Fix a leak when an invalid character
+	is seen, as well as fixing semantics.  Don't reset the word count
+	to zero when an invalid character is seen, but leave it as it was
+	(this makes a difference with WRDE_APPEND).
+
+	* posix/wordexp-test.c: More test cases.
+
+	* posix/wordexp.c (parse_param): In words like ${var#pattern},
+	always expand pattern when it is needed.  Also, handle quoting in
+	pattern properly.
+
 1999-04-12  Philip Blundell  <philb@gnu.org>
 
 	* elf/elf.h: Update ARM definitions to match current gas2.
