--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-04-12  Ulrich Drepper  <drepper@cygnus.com>
+
+	* iconvdata/gconv-modules: Fix typo.  Add UJIS alias.
+	Reported by GOTO Masanori <gotom@cs.titech.ac.jp>.
+
 1999-04-11  Tim Waugh  <tim@cyberelk.demon.co.uk>
 
 	* posix/wordexp.c (wordexp): Fix a leak when an invalid character
