--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-04-12  Tim Waugh  <tim@cyberelk.demon.co.uk>
+
+	* posix/wordexp-test.c: In field-splitting test cases where
+	subshells were involved, unset IFS first: some shells (ash) use
+	IFS even when no expansion is performed.
+
 1999-04-13  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>
 
 	* libio/obprintf.c (_IO_obstack_overflow): Put the write end at
