--- a/localedata/ChangeLog
+++ b/localedata/ChangeLog
@@ -1,3 +1,7 @@
+1999-04-12  Ulrich Drepper  <drepper@cygnus.com>
+
+	* locales/id_ID: New file.
+
 1999-04-10  Ulrich Drepper  <drepper@cygnus.com>
 
 	* charmaps/TIS-620: New file.
