--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-04-14  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
+
+	* wctype/wcfuncs.c (towlower): Use __ctype_tolower.
+	Reported by Kalle Olavi Niemitalo <tosi@ees2.oulu.fi>
+
 1999-04-12  Tim Waugh  <tim@cyberelk.demon.co.uk>
 
 	* posix/wordexp-test.c: In field-splitting test cases where
