--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-04-14  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
+
+	* wctype/test_wcfuncs.c: New file, tests towlower and towupper.
+	* wctype/Makefile (tests): Add test_wcfuncs.
+
 1999-04-14  Jakub Jelinek  <jj@ultra.linux.cz>
 
 	* scripts/config.sub: Allow sparcv[6789]-* and sparcv8plus{,a}-*
