--- a/linuxthreads/ChangeLog
+++ b/linuxthreads/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-16  H.J. Lu  <hjl@gnu.org>
+
+	* specific.c (pthread_key_delete): Check th->p_terminated to see
+	if the thread is running.
+
 1999-02-12  H.J. Lu  <hjl@gnu.org>
 
 	* Versions (__libc_current_sigrtmin, __libc_current_sigrtmax,
