--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-04-14  H.J. Lu  <hjl@gnu.org>
+
+	* sunrpc/clnt_udp.c (is_network_up): New function.
+	(clntudp_call): Call is_network_up () to check if any network
+	interface is up in case of timeout.
+
 1999-04-14  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
 
 	* wctype/test_wcfuncs.c: New file, tests towlower and towupper.
