--- a/localedata/ChangeLog
+++ b/localedata/ChangeLog
@@ -1,3 +1,10 @@
+1999-04-14  Cristian Gafton  <gafton@redhat.com>
+
+	* SUPPORTED: Add support for Ukraine Russian.
+	* locales/ru_UA: New file.
+	* locales/uk_UA: New file.
+	* charmaps/KOI8-U: New file.
+
 1999-04-12  Ulrich Drepper  <drepper@cygnus.com>
 
 	* locales/id_ID: New file.
