--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+1999-04-15  Ulrich Drepper  <drepper@cygnus.com>
+
+	* catgets/gencat.c (read_input_file): Don't drop white spaces
+	between number/identifier and string.
+	Patch by Dima Barsky <dima@pwd.hp.com>.
+	If no white space at all follows number/identifier remove existing
+	message with the number/ientifier.
+
 1999-04-14  H.J. Lu  <hjl@gnu.org>
 
 	* sunrpc/clnt_udp.c (is_network_up): New function.
